--- a/docs/quests/EDAs/preprocessing_titanic_train.ipynb
+++ b/docs/quests/EDAs/preprocessing_titanic_train.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrWpsZE6uGqnNHjBKiPRSp",
+      "authorship_tag": "ABX9TyOPy3B2Oly4CG/NWY3NuJZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "9GbynOQEtsIq"
       },
-      "execution_count": 133,
+      "execution_count": 214,
       "outputs": []
     },
     {
@@ -2453,7 +2453,7 @@
       "metadata": {
         "id": "nVMHl6ayFfiq"
       },
-      "execution_count": 193,
+      "execution_count": 216,
       "outputs": []
     },
     {
@@ -2470,9 +2470,9 @@
           "height": 300
         },
         "id": "1jvL13eQGD7i",
-        "outputId": "44e99154-8848-48a5-f2a8-b9691630612b"
+        "outputId": "d8867b70-5a8a-4ed4-9ccf-37db07a63d45"
       },
-      "execution_count": 155,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2488,19 +2488,19 @@
               "732          733         0       2              Knight, Mr. Robert J  male   \n",
               "815          816         0       1                  Fry, Mr. Richard  male   \n",
               "\n",
-              "     Age  SibSp  Parch  Ticket  Fare Cabin Embarked  Age_null  Fare_null  \n",
-              "277  NaN      0      0  239853   0.0   NaN        S      True      False  \n",
-              "413  NaN      0      0  239853   0.0   NaN        S      True      False  \n",
-              "466  NaN      0      0  239853   0.0   NaN        S      True      False  \n",
-              "481  NaN      0      0  239854   0.0   NaN        S      True      False  \n",
-              "633  NaN      0      0  112052   0.0   NaN        S      True      False  \n",
-              "674  NaN      0      0  239856   0.0   NaN        S      True      False  \n",
-              "732  NaN      0      0  239855   0.0   NaN        S      True      False  \n",
-              "815  NaN      0      0  112058   0.0  B102        S      True      False  "
+              "     Age  SibSp  Parch  Ticket  Fare Cabin Embarked  Age_null  \n",
+              "277  NaN      0      0  239853   0.0   NaN        S      True  \n",
+              "413  NaN      0      0  239853   0.0   NaN        S      True  \n",
+              "466  NaN      0      0  239853   0.0   NaN        S      True  \n",
+              "481  NaN      0      0  239854   0.0   NaN        S      True  \n",
+              "633  NaN      0      0  112052   0.0   NaN        S      True  \n",
+              "674  NaN      0      0  239856   0.0   NaN        S      True  \n",
+              "732  NaN      0      0  239855   0.0   NaN        S      True  \n",
+              "815  NaN      0      0  112058   0.0  B102        S      True  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-468eb8c1-0e6e-4981-ab23-48c2f31e4fa8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ae8bc3f8-85cf-4ade-a116-90610024baff\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2532,7 +2532,6 @@
               "      <th>Cabin</th>\n",
               "      <th>Embarked</th>\n",
               "      <th>Age_null</th>\n",
-              "      <th>Fare_null</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2551,7 +2550,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>413</th>\n",
@@ -2568,7 +2566,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>466</th>\n",
@@ -2585,7 +2582,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>481</th>\n",
@@ -2602,7 +2598,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>633</th>\n",
@@ -2619,7 +2614,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>674</th>\n",
@@ -2636,7 +2630,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>732</th>\n",
@@ -2653,7 +2646,6 @@
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>815</th>\n",
@@ -2670,7 +2662,6 @@
               "      <td>B102</td>\n",
               "      <td>S</td>\n",
               "      <td>True</td>\n",
-              "      <td>False</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2678,7 +2669,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-468eb8c1-0e6e-4981-ab23-48c2f31e4fa8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ae8bc3f8-85cf-4ade-a116-90610024baff')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2730,12 +2721,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-468eb8c1-0e6e-4981-ab23-48c2f31e4fa8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ae8bc3f8-85cf-4ade-a116-90610024baff button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-468eb8c1-0e6e-4981-ab23-48c2f31e4fa8');\n",
+              "        const element = document.querySelector('#df-ae8bc3f8-85cf-4ade-a116-90610024baff');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2755,8 +2746,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-41affd23-3695-4b7a-a8ba-fde8f1cb5992\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-41affd23-3695-4b7a-a8ba-fde8f1cb5992')\"\n",
+              "<div id=\"df-1f32e8de-89d3-4317-add3-e36039025622\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1f32e8de-89d3-4317-add3-e36039025622')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2875,7 +2866,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-41affd23-3695-4b7a-a8ba-fde8f1cb5992 button');\n",
+              "        document.querySelector('#df-1f32e8de-89d3-4317-add3-e36039025622 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2887,163 +2878,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 155
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "condition_age = 'Age_null==True'\n",
-        "condition_fare = 'Fare_null==True'\n",
-        "conditions = f\"{condition_age} and {condition_fare}\"\n",
-        "df_titanic.query(condition_fare)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "bLfmpmKWHAXr",
-        "outputId": "445cf4fd-66f3-40ce-d1e3-21f2a8bf5ad3"
-      },
-      "execution_count": 130,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [PassengerId, Survived, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked, Age_null, Fare_null]\n",
-              "Index: []"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-48b2527b-cb9f-4d15-9b69-8e8d24d903b2\" class=\"colab-df-container\">\n",
-              "    <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>PassengerId</th>\n",
-              "      <th>Survived</th>\n",
-              "      <th>Pclass</th>\n",
-              "      <th>Name</th>\n",
-              "      <th>Sex</th>\n",
-              "      <th>Age</th>\n",
-              "      <th>SibSp</th>\n",
-              "      <th>Parch</th>\n",
-              "      <th>Ticket</th>\n",
-              "      <th>Fare</th>\n",
-              "      <th>Cabin</th>\n",
-              "      <th>Embarked</th>\n",
-              "      <th>Age_null</th>\n",
-              "      <th>Fare_null</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "    <div class=\"colab-df-buttons\">\n",
-              "\n",
-              "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-48b2527b-cb9f-4d15-9b69-8e8d24d903b2')\"\n",
-              "            title=\"Convert this dataframe to an interactive table.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "\n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-48b2527b-cb9f-4d15-9b69-8e8d24d903b2 button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-48b2527b-cb9f-4d15-9b69-8e8d24d903b2');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "    </div>\n",
-              "  </div>\n"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 130
+          "execution_count": 217
         }
       ]
     },
