Colaboratory를 통해 생성됨

--- a/docs/quests/CDAs/CDA_fruitstore_continuous.ipynb
+++ b/docs/quests/CDAs/CDA_fruitstore_continuous.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKvU/W4Z0Azl/1ZxZw05Az",
+      "authorship_tag": "ABX9TyNBt0jB5riW7sdClGl3tXJi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,31 +236,6 @@
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_fruit['상품단가'] = df_fruit['구매금액']/df_fruit['구매수량']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uAOBdFADc5SM",
-        "outputId": "5d4ca666-b56f-442b-9572-79e2c43feee5"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-8-7523de0442e8>:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_fruit.dropna(inplace=True)\n"
           ]
         }
       ]
@@ -1327,7 +1302,7 @@
       "metadata": {
         "id": "xvpuYbRBrNdQ"
       },
-      "execution_count": 40,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1340,9 +1315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J0eSQ5DNddu1",
-        "outputId": "786422dc-1442-4ae0-e600-ddfc3008ab19"
+        "outputId": "d9240f52-63cb-41b6-a768-c7525cf2cc5c"
       },
-      "execution_count": 42,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1352,33 +1327,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 48
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "round(1.3145251519662877e-27)"
+        "# 두 값의 상관계수 확인\n",
+        "correlation = df_fruit_number_price[['상품단가', '구매수량']].corr()\n",
+        "print(correlation)\n",
+        ""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I_hOZa2oriJZ",
-        "outputId": "3c3093e5-42a3-49d9-f553-adb43502081c"
+        "outputId": "130f33a8-f3e0-444e-9349-4cf0d9b1849d"
       },
-      "execution_count": 44,
+      "execution_count": 49,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 44
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          상품단가      구매수량\n",
+            "상품단가  1.000000 -0.087656\n",
+            "구매수량 -0.087656  1.000000\n"
+          ]
         }
       ]
     },
